# prometheus-grafana-fastapi

./: Dockerfile  README.md  alerts.yaml  compose.yaml  podman-compose.yaml  prometheus.yaml  pyproject.toml  test_client.py
.github/workflows/: semvar_bump.yaml
app/: main.py  requirements.txt
prometheus/: prometheus.yml
src/fastapi_apm/: logger.py  main.py
tests/: test_client.py
