[project]
name = "fastapi-apm"
version = "0.1.0"
description = "FastAPI APM Monitoring Stack"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "prometheus-fastapi-instrumentator>=1.0.0",
    "loguru>=0.7.3",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


# [project.scripts]
# test-client = "fastapi_apm.test_client:main"

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["app*"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]
